--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -193,7 +193,7 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
     </span>
   </a>
   <a className="link-item" href="https://discord.gg/UUt2PJb" target="_blank">
-    <img src={Comments} alt="comments" />
+    <img src={Comments} alt="comment" />
     <span>
       <strong>Discord chat</strong>
       Chat with maintainers and the community
